{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 35,
  "lineage": "889fe174-2c5e-fafa-dc18-3a8dffb35877",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "compliant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163475282401:security-group/sg-0f2b8a30d0fbb7a5b",
            "description": "Compliant security group with no open inbound rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2b8a30d0fbb7a5b",
            "ingress": [],
            "name": "sec-scanner-compliant-sg",
            "name_prefix": "",
            "owner_id": "163475282401",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06941203218aa8069"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "noncompliant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163475282401:security-group/sg-0642e7c63be6d704f",
            "description": "Non-compliant security group with open SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0642e7c63be6d704f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec-scanner-noncompliant-sg",
            "name_prefix": "",
            "owner_id": "163475282401",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06941203218aa8069"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163475282401:vpc/vpc-06941203218aa8069",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-052dfb4787deaf463",
            "default_route_table_id": "rtb-0671b58f8dcea5128",
            "default_security_group_id": "sg-0ebadc78727dcb057",
            "dhcp_options_id": "dopt-0698b655ab8bd07c6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06941203218aa8069",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0671b58f8dcea5128",
            "owner_id": "163475282401",
            "tags": {
              "Name": "sec-scanner-vpc"
            },
            "tags_all": {
              "Name": "sec-scanner-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}